hw2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: arch-homework-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: arch-homework
    template:
       metadata:
          labels:
             app: arch-homework
       spec:
          containers:
          - name: arch-homework
            image: p12s/hw2:v2
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:              # под жив и ее опрашивает агент kubelet 
              httpGet:
                port: 8000
                path: /
              initialDelaySeconds: 10
              periodSeconds: 6
              timeoutSeconds: 2
            readinessProbe:             # под готов для того, чтобы принимать трафик
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 6
